# chii

./: .gitignore  README.md  SCHEMA.sql  config.example.toml  launcher.py  pyproject.toml
.github/workflows/: coverage_and_lint.yml
core/: __init__.py  config.py  core.py  exceptions.py  limiter.py  logger.py  sessions.py
database/: __init__.py  database.py
docs/: index.css  index.html  swagger-initializer.js
server/: __init__.py  application.py
types_/: __init__.py  config.py  database.py  limits.py  requests.py
views/: __init__.py  api.py  redirects.py  web.py
web/pages/: index.html
web/static/: styles.css
web/static/scripts/: general.js
